--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,8 +20,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
     /* "noUncheckedSideEffectImports": true */
+    "typeRoots": ["../node_modules/@types", "../@types"]
   },
   "include": ["src"]
 }
